<resources>
    <string name="app_name">F2503</string>
    <string name="notice">提醒</string>
    <string name="room">房间</string>
    <string name="tenant">租客</string>
    <string name="bill">账单</string>
    <string name="save">保存</string>
    <string name="water_display">水表示数</string>
    <string name="electricity_display">电表示数</string>
    <string name="input">请输入</string>
    <string name="history">历史记录</string>
    <string name="cancel">取消</string>
    <string name="new_tenant_check_in">新租客入住</string>
    <string name="old_tenant_check_out">老租客结算</string>
    <string name="save_and_fresh">保存并刷新</string>
    <string name="current_tenant">在住租客</string>
    <string name="history_tenant">历史租客</string>
    <string name="add">新增</string>
    <string name="add_tenant">添加新租客</string>
    <string name="tenant_info">租客信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="phone">电话</string>
    <string name="id_card">身份证</string>
    <string name="contract_info">合同信息</string>
    <string name="contract_begin_date">合同起期</string>
    <string name="contract_term">合同期限(月)</string>
    <string name="month_rent">每月租金(元)</string>
    <string name="payment_method">付款方式</string>
    <string name="no_water_input">水表示数不得为空！</string>
    <string name="no_electricity_input">电表示数不得为空！</string>
    <string name="no_name_input">姓名不得为空！</string>
    <string name="no_sex_input">性别不得为空！</string>
    <string name="no_phone_input">电话不得为空！</string>
    <string name="no_id_card_input">身份证不得为空！</string>
    <string name="no_contract_begin_date_input">合同起期不得为空！</string>
    <string name="no_contract_term_input">合同期限不得为空！</string>
    <string name="no_month_rent_input">每月租金不得为空！</string>
    <string name="no_payment_method_input">付款方式不得为空！</string>
    <string name="confirm">确定</string>
    <string name="room_info">房间信息</string>
    <string name="room_name">房间名</string>
    <string name="no_room_name_input">房间名不得为空！</string>
    <string name="check_in_room">入住房间</string>

    <!-- 日期选择器-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>


    <string name="no_check_in_room_input">入住房间不得为空！</string>
    <string name="tenant_detail">租客详情</string>
    <string name="fee_detail">费用详情</string>
    <string name="payment_record">缴费记录</string>
    <string name="check_out">搬出</string>
    <string name="change">修改</string>
    <string name="fail_to_do">操作失败！</string>
    <string name="success_to_do">操作成功！</string>
    <string name="success_to_save">保存成功！</string>
    <string name="w_e_fee">水电费</string>
    <string name="last_pay_date">上次结清日期</string>
    <string name="unpay_water_fee">待缴水费</string>
    <string name="unpay_electricity_fee">待缴电费</string>
    <string name="roon_charge">房租</string>
    <string name="next_pay_date">待结算日期</string>
    <string name="total_fee">费用合计</string>
    <string name="w_e_total_fee">水电费合计(元)</string>
    <string name="balance_w_e">结清水电</string>
    <string name="balance_room">结清房租</string>
    <string name="rent_total">房租合计(元)</string>
    <string name="balance_times">已结算次数</string>
    <string name="last_record_date">最近抄表日期</string>
    <string name="w_e_input">水电表录入</string>


</resources>
