<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <!-- 标题栏-->
    <include layout="@layout/include_title_bar"/>

    <!--水电表录入-->
    <TextView style="@style/middle_title"
        android:text="@string/w_e_input"
        />

    <!-- 水表录入-->
    <View style="@style/split_line" />

    <LinearLayout style="@style/white_board">

        <TextView style="@style/input_item"
            android:text="@string/water_display"
            />

        <EditText style="@style/input"
            android:id="@+id/water_input"
            />
    </LinearLayout>

    <View style="@style/split_line" />

    <!-- 电表录入-->
    <LinearLayout style="@style/white_board">

        <TextView style="@style/input_item"
            android:text="@string/electricity_display"
            />

        <EditText style="@style/input"
            android:id="@+id/electricity_input"

            />
    </LinearLayout>

    <View style="@style/split_line" />

    <!-- 历史记录-->
    <TextView style="@style/middle_title"
        android:text="@string/history"
        />

    <ListView
        android:id="@+id/record_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        />


</LinearLayout>