<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 租客详情-->
        <View style="@style/split_line"
            android:layout_marginTop="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <!--姓名-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/name"
                        />

                    <EditText style="@style/input"
                        android:id="@+id/name_input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line"/>

                <!-- 性别-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/sex"
                        />

                    <EditText
                        android:id="@+id/sex_input"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line" />

                <!-- 电话-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/phone"
                        />

                    <EditText
                        android:id="@+id/phone_input"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line" />

                <!-- 身份证-->

                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/id_card"
                        />

                    <EditText
                        android:id="@+id/id_card"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line"/>

                <!--合同起期-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/contract_begin_date"
                        />

                    <EditText
                        android:id="@+id/begin_date"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line" />

                <!-- 合同期限-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/contract_term"
                        />

                    <EditText
                        android:id="@+id/term_input"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line" />

                <!-- 每月租金-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/month_rent"
                        />

                    <EditText
                        android:id="@+id/rent_input"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line"/>

                <!-- 付款方式-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/payment_method"
                        />

                    <EditText
                        android:id="@+id/payment_method"
                        style="@style/input"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line"/>

                <!--入住房间-->
                <LinearLayout style="@style/white_board">

                    <TextView
                        style="@style/input_item"
                        android:text="@string/check_in_room"
                        />

                    <EditText style="@style/input"
                        android:id="@+id/check_in_room"
                        android:focusable="false"
                        />

                </LinearLayout>

                <View style="@style/split_line"
                    android:layout_marginBottom="40dp"
                    />

            </LinearLayout>

        </ScrollView>




    </LinearLayout>

    <LinearLayout style="@style/white_board"
        android:layout_alignParentBottom="true"
        >

        <Button style="@style/bottom_btn"
            android:id="@+id/check_out"
            android:text="@string/check_out"
            />

        <Button style="@style/bottom_btn"
            android:id="@+id/edit_tenant"
            android:text="@string/change"
            android:background="@color/orange_btn"
            />

    </LinearLayout>


</RelativeLayout>