<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <!-- 标题栏-->
    <include layout="@layout/include_title_bar"/>

    <!-- 房间信息-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/gray_text"
        android:text="@string/room_info"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_border"
        />

    <!--房间名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/room_name"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@color/black_text"
            />

        <EditText
            android:id="@+id/room_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/input"
            android:background="@null"
            android:textColor="@color/black_text"
            android:padding="10dp"
            android:textSize="16sp"

            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_border"
        />

</LinearLayout>