<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <!-- 标题栏-->
    <include layout="@layout/include_title_bar"/>

    <!-- 滑动页标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vp_left"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/tenant_detail"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/vp_middle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/fee_detail"
            android:gravity="center"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/vp_right"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/payment_record"
            android:gravity="center"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vp_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_border"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

    </LinearLayout>

    <!-- 左右滑动页-->
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>